# SlotMachine

./: CMakeLists.txt  README.md  app.rc.in  main.cpp  rarity.cfg  rarity_old.cfg
core/: GameState.cpp  GameState.h  PayTable.cpp  PayTable.h  RarityConfig.cpp  RarityConfig.h  Reel.cpp  Reel.h  SlotMachine.cpp  SlotMachine.h  SoundEngine.cpp  SoundEngine.h  Symbol.cpp  Symbol.h  UpperScreen.cpp
ui/: DoubleUpWidget.cpp  DoubleUpWidget.h  LowerScreen.cpp  LowerScreen.h  MainWindow.cpp  MainWindow.h  ReelWidget.cpp  ReelWidget.h  UpperScreen.cpp  UpperScreen.h  WinTableWidget.cpp  WinTableWidget.h  main.cpp
